Actualización de los permisos de usuario y administrador