@@ -4,6 +4,7 @@ import com.NomadNook.NomadNook.Security.Auth.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -47,9 +48,34 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
+                        // Rutas públicas sin autenticación
                         .requestMatchers("/api/auth/**").permitAll()  // Permite acceso a la autenticación
                         .requestMatchers("/api/public/**").permitAll() // Rutas públicas
-                        .anyRequest().authenticated() // Todas las demás requieren autenticación
+                        .requestMatchers(HttpMethod.GET, "api/alojamientos/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "api/imagenes/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "api/resenas/**").permitAll()
+                        //.anyRequest().authenticated() // Todas las demás requieren autenticación
+
+                        // Reseñas: cliente puede crear, modificar y eliminar sus propias reseñas
+                        .requestMatchers(HttpMethod.POST, "api/resenas/**").hasAnyRole("CLIENT", "ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "api/resenas/**").hasAnyRole("CLIENT", "ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "api/resenas/**").hasAnyRole("CLIENT", "ADMIN")
+
+                        .requestMatchers("api/usuarios/register").permitAll() // Permitir acceso al registro
+                        .requestMatchers(HttpMethod.POST, "api/usuarios/register").permitAll()
+
+                        // Reservas: cliente puede ver, crear, modificar y eliminar sus reservas
+                        .requestMatchers("api/reservas/**").hasAnyRole("CLIENT", "ADMIN")
+
+                        // Pagos: cliente puede ver y crear sus pagos
+                        .requestMatchers(HttpMethod.GET, "api/pagos/**").hasAnyRole("CLIENT", "ADMIN")
+                        .requestMatchers(HttpMethod.POST, "api/pagos/**").hasAnyRole("CLIENT", "ADMIN")
+
+                        // Admin tiene acceso a todo el resto
+                        .requestMatchers("api/admin/**").hasRole("ADMIN")
+
+                        // Cualquier otra ruta requiere autenticación
+                        .anyRequest().authenticated()
 
                 )
                 .sessionManagement(session -> session
@@ -68,7 +94,8 @@ public class SecurityConfig {
                 "http://localhost:3000",
                 "http://localhost:5173"
         ));
-        configuration.setAllowedMethods(List.of("PUT"));
+        // Corregido para permitir todos los métodos HTTP necesarios
+        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
